@@ -7,6 +7,7 @@
     <property name="window_position">GTK_WIN_POS_CENTER_ALWAYS</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <property name="deletable">False</property>
+    <signal name="realize" handler="set_window_hints"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
